--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -11,7 +11,7 @@
   --bg-color: #6fbbee;
   --bg-color-transparent: #00163f80;
   --font-color: #ffffff;
-  --btn-bg-color: #ffffff;
+  --btn-bg-color: #ff0000;
   --accent-color: #FA6609;
   --header-shadow: var(--accent-color) 0px 0px 5px;
   --card-shadow: var(--accent-color) 0px 0px 20px;
